--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-minimalist-profile",
+  "name": "profile-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
